finish basic page layout

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,10 @@
-// This file is for importing only!!!
 
 @import "1-tools/normalize";
 @import "1-tools/fonts";
 @import "1-tools/vars";
 
 @import "4-pages/graduation";
-
-// // This is the single file output by sass. It is intended to ONLY @import other files.
+/*
 //
 //
 // // 1 - TOOLS
@@ -32,3 +30,4 @@
 //
 // // 4 - pages
 // @import '4-pages/example-page-home'
+*/
