optimise date formate

--- a/sass/4-pages/_graduation.scss
+++ b/sass/4-pages/_graduation.scss
@@ -496,6 +496,14 @@
   }
 }
 
+.m-scroller{
+  .scroller-item {
+    white-space: nowrap;
+  	overflow: hidden;
+  	text-overflow: ellipsis;
+  }
+}
+
 
 .m-dialog-mark {
   position: absolute;
