--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,33 +1,11 @@
-
+// Import tools here
 @import "1-tools/normalize";
-@import "1-tools/fonts";
-@import "1-tools/vars";
+@import "1-tools/placeholder";
+@import "1-tools/mixin";
+@import "1-tools/animate";
 
-@import "4-pages/graduation";
-/*
-//
-//
-// // 1 - TOOLS
-// //@import '1-tools/bourbon/bourbon'
-// @import '1-tools/fonts'
-// @import '1-tools/normalize'
-// @import '1-tools/vars'
-//
-//
-// // 2 - BASICS
-// @import '2-basics/body-element'
-// @import '2-basics/selection-colors'
-// @import '2-basics/links'
-// @import '2-basics/typography'
-// @import '2-basics/example-buttons'
-//
-//
-// // 3 - Modules
-// @import '3-modules/example-module-name-lockup'
-// @import '3-modules/example-fork-tag'
-// @import '3-modules/example-flex-video'
-//
-//
-// // 4 - pages
-// @import '4-pages/example-page-home'
-*/
+// Import modules here
+@import "2-modules/scroll";
+
+// Import page specific styles here
+@import "3-pages/graduation";
