user experience optimization, default current month, default city is canton

--- a/views/grad.pug
+++ b/views/grad.pug
@@ -175,4 +175,6 @@ html
     script(src='../js/libs/zepto/zepto.min.js')
     script(src='../js/libs/toast/toast.js')
     script(src='../js/libs/anima-scroller/scroller.js')
+    script(src='../js/read.js')
+    script(src='../js/tounick_scroll.js')
     script(src='../js/graduation.js')
