fix bug on mobile device

--- a/views/grad.pug
+++ b/views/grad.pug
@@ -171,6 +171,7 @@ html
         // 表单接口地址由后端输出
         var backEndUrl = "#{gradP.backEndUrl}";
 
+    script(src='../js/common.js')
     script(src='../json/cityData.json')
     script(src='../js/libs/zepto/zepto.min.js')
     script(src='../js/libs/toast/toast.js')
